--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="_0">0</string>
     <string name="_plus">+</string>
     <string name="_equals">=</string>
+    <string name="settings">⚙️</string>
 </resources>
